--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,11 @@
+# BEGIN Force SSL for SAKURA
+# 常時HTTPS化(HTTPSが無効な場合リダイレクト)
+<IfModule mod_rewrite.c>
+RewriteEngine on
+RewriteCond %{HTTPS} !on
+RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+</IfModule>
+# END Force SSL for SAKURA
 
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
